<resources>
    <string name="app_name">CST438-Project-1</string>
    <string name="textview_top">Login Example Using Room with LiveData</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="textview_landingPage_welcomeText">Welcome, User!</string>
    <string name="button_landingPage_userInfo">User Info</string>
    <string name="button_landingPage_courses">Courses</string>
    <string name="button_landingPage_logout">Log Out</string>
    <string name="button_createAccount">Create Account</string>
    <string name="button_add_course">Add Course</string>
    <string name="edit_user">Edit User</string>
    <string name="add_course">Add course</string>
    <string name="instructor">Instructor</string>
    <string name="end_date">End date</string>
    <string name="course_id">Course ID</string>
    <string name="start_date">Start date</string>
    <string name="description">Description</string>
    <string name="add">ADD</string>
    <string name="title">Title</string>
    <string name="view_courses">View Courses</string>
    <string name="view_assignments">View Assignments</string>
    <string name="recycler_textview_title">Title</string>
    <string name="recycler_textview_instructor">Instructor</string>
    <string name="recycler_textview_courseId">Course ID</string>


</resources>
